--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-contacts">
-                <ul class="address">
+                <ul class="address-set">
                     <li class="address__logo"><a href="" class="logo footer__logo"><span>Web</span>Studio</a></li>
                     <li class="address-item"><a href="">
                             <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
